Addition of createMinimalCase() to populate database and use of jdbcTemplate